* fix shrinking button-icons * fix overflowing beacon-list action btns

--- a/src/theme/buttons.less
+++ b/src/theme/buttons.less
@@ -20,6 +20,13 @@ a.btn-img {
   }
 }
 
+.btn {
+
+  > .i {
+    flex-shrink: 0;
+  }
+}
+
 .btn-img {
   position: relative;
 
